# peppermint

./: .gitignore  Cargo.toml  Justfile  README.md
cli/: Cargo.toml  sample_program.sasm
cli/src/: main.rs
peppermint-rs/: Cargo.toml
peppermint-rs/src/: error.rs  lex.rs  lib.rs
peppermint-rs/tests/: parse_sample.rs
simulate/: Cargo.toml
simulate/src/: lib.rs
src/: lib.rs  main.rs
tests/: parse_sample.rs
tree-sitter-peppermint/: .gitignore  Cargo.toml  Justfile  Package.swift  grammar.js  package-lock.json  package.json  pyproject.toml
tree-sitter-peppermint/bindings/c/: tree-sitter-peppermint.pc.in
tree-sitter-peppermint/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-peppermint/bindings/node/: binding.cc
tree-sitter-peppermint/bindings/python/tree_sitter_peppermint/: __init__.py  binding.c
tree-sitter-peppermint/bindings/rust/: build.rs  lib.rs
tree-sitter-peppermint/bindings/swift/TreeSitterPeppermint/: peppermint.h
tree-sitter-peppermint/queries/: highlights.scm
tree-sitter-peppermint/src/: grammar.json  node-types.json  parser.c
tree-sitter-peppermint/test/corpus/: basics.txt  comments.txt  complex.txt  labels.txt  literals.txt  sample.txt
